Gjort noen forbedringer

--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
   <body>
     <header>
       <h1>Nedbetalingsplan</h1>
-      <button id="btn">Hent fil</button>
+      <h2>Trykk så på knappen under for å få ut nedbetalingsplanen din.</h2>
+      <button id="btn">Hent plan</button>
     </header>
     <script src="js/json.js"></script>
-    <!-- Rader med data blir lagt til gjennom ajax.js -->
+    <!-- Rader med data blir lagt til gjennom json.js -->
     <table id="table">
       <tr>
         <th>Restgjeld</th>
